Add debug-tests profile to Maven build.
This will enable attaching a remote debugger to the tests when running
on the Eclipse Hudson server.